# clash-verge-next

./: i18n.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: layout.tsx  page.tsx  providers.tsx
app/profile/: page.tsx
components/: index.ts  sidebar.tsx
components/layout/: clash-layout.tsx  sidebar.tsx  traffic.tsx
components/layout/base/: base-error-boundary.tsx  base-page.tsx
components/profile/: profile-item.tsx
components/proxy/: proxy-groups.tsx  proxy-render.tsx  use-filter-sort.ts  use-head-state.ts  use-render-list.ts  use-window-width.ts
components/svgs/: dark_icon.tsx  light_icon.tsx  logo.tsx
hooks/: use-profiles.ts  use-verge.ts  useIsDark.ts
messages/: en.json  fa.json  ru.json  zh.json
scripts/: check.mjs
services/: api.ts  cmds.ts  ltypes.d.ts  types.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/resources/: clash-verge-service
src-tauri/src/: cmds.rs  main.rs
src-tauri/src/config/: clash.rs  config.rs  draft.rs  mod.rs  prfitem.rs  profiles.rs  runtime.rs  verge.rs
src-tauri/src/core/: clash_api.rs  core.rs  handle.rs  mod.rs  sysopt.rs
src-tauri/src/enhance/: chain.rs  field.rs  mod.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  mod.rs  resolve.rs  server.rs
