[package]
name = "app"
version = "0.1.0"
description = "A GUI for Clash Meta"
authors = ["zengqiang96@gmail.com"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.5", features = [ "updater", "fs-exists", "fs-read-file", "process-all", "process-command-api"] }
anyhow = "1.0.86"
serde_yaml = "0.9.34"
once_cell = "1.19.0"
log = "0.4.21"
parking_lot = "0.12.3"
sysinfo = "0.29.5"
reqwest = "0.12.5"
port_scanner = "0.1.5"
sysproxy = "0.3.0"
auto-launch = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
